--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 .image-container{
     height:500px;
-    width: 350px;;
+    width: 350px;
     position: relative;
     margin-left: 10%;
     margin-top: 3%;
